regression-tests/test-results/clang-12-c++20/pure2-bugfix-for-non-local-function-expression.cpp.output
pure2-bugfix-for-non-local-function-expression.cpp2:5:34: error: lambda expression in an unevaluated operand
template<typename T> concept v = []() mutable -> bool { return true;  }(); 
                                 ^
pure2-bugfix-for-non-local-function-expression.cpp2:7:41: error: lambda expression in an unevaluated operand
using u = std::type_identity_t<decltype([]() mutable -> void{})>;
                                        ^
pure2-bugfix-for-non-local-function-expression.cpp2:9:47: error: lambda expression in an unevaluated operand
class t: public std::type_identity_t<decltype([]() mutable -> void{})> {
                                              ^
3 errors generated.
